Punchout: refactor code for cXML checkout